[package]
name = "iot_center"
version = "0.0.1"
authors = ["babydragon <jlj.babydragon@gmail.com>"]
description = "simple iot center to receive from mqtt and save to sqlite"

repository = "https://github.com/babydragon/iot_center"
readme = "README.md"
license = "MIT"

[dependencies]
rumqtt = "0.10.1"
rusqlite = "0.14.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chan-signal = "0.3.1"
toml = "0.4"
log = "0.4"
log4rs = "0.8.0"
